--- a/web/view/index.html
+++ b/web/view/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>index2</title>
+    <title>index</title>
 </head>
 <body>
-<h2>This is Index2 page</h2>
+<h2>This is Index page</h2>
 
 <form action="add">
     Enter a number :<input type="text" name="num1"><br>
