sendRedirect -> response the browser by telling him to send a new request to another URL/another website

--- a/web/view/index.html
+++ b/web/view/index.html
@@ -10,7 +10,10 @@
 <form action="add">
     Enter a number :<input type="text" name="num1"><br>
     Enter another number :<input type="text" name="num2"><br>
-    <input type="submit">
+    Submit to sum : <input type="submit">
+
+    <br>
+    <button type="submit" formaction="/multiply">Submit to multiply</button>
 </form>
 </body>
 </html>
